--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
         "pages/home/index",
         "pages/catgory/index",
         "pages/cart/index",
-        "pages/me/index"
+        "pages/me/index",
+        "pages/list/index",
+        "pages/detail/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
